# reversi2

./: AIPlayer.cpp  AIPlayer.h  Board.cpp  Board.h  CMakeLists.txt  Client.cpp  Client.h  ConsoleDisplay.cpp  ConsoleDisplay.h  ConsoleLogic.cpp  ConsoleLogic.h  ConsolePlayer.cpp  ConsolePlayer.h  GameLevel.cpp  GameLevel.h  GameLogic.cpp  GameLogic.h  LocalVsRemote.cpp  LocalVsRemote.h  Logic.cpp  Logic.h  Player.cpp  Player.h  Point.cpp  Point.h  RemoteGameFlow.cpp  RemoteGameFlow.h  RemoteGameLevel.cpp  RemoteGameLevel.h  RemotePlayer.cpp  RemotePlayer.h  Symbol.h  a.out  decisions.txt  desions.txt  log.txt  main.cpp  makefile  settings.txt
src/server/: Server.cpp  Server.h
tests/: BoardTest.cpp  gtest_main.cpp  gtest_server.cpp  mainTest.cpp  test_AIMoves.cpp  test_board.cpp  test_consoleLogic.cpp  test_consolePlayer.cpp  test_point.cpp
